<resources>
    <string name="unknown_error">Unexpected error!</string>
    <string name="no_internet_error">No Internet! Please check phone connection.</string>
    <string name="invalid">Invalid!</string>
    <string name="unauthorized_user">Unauthorized user!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_wallets">Wallets</string>
    <string name="menu_item_transactions">Transactions</string>
    <string name="menu_item_currencies">Currencies</string>
    <string name="menu_item_contacts">Contacts</string>
    <string name="menu_item_extras">Extras</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_sign_out">Sign Out</string>
    <string name="menu_header_profile">Profile</string>
    <string name="menu_header_email_placeholder">username@email.com</string>
    <string name="home_web_card_button">READ MORE</string>
    <string name="home_internal_card_faq_button">VIEW FAQ</string>
    <string name="home_internal_card_feedback_button">SEND FEEDBACK</string>
    <string name="home_chart_card_buy_button">BUY LUMENS</string>
    <string name="home_chart_card_sell_button">SELL LUMENS</string>
    <string name="home_chart_title">Lumen price</string>
    <string name="home_account_title">Your account</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_two_factor">Two Factor Code</string>
    <string name="hint_password_confirmation">Password confirmation</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="action_sign_in">Login</string>
    <string name="action_submit">Submit</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">Invalid email.</string>
    <string name="info_password_requirements">Password must contain at least one digit, one lower case and one upper case letter and has to be at least 9 characters long!</string>
    <string name="error_invalid_password_min_one_lower_case_char">Password must contain at least one lower case character</string>
    <string name="error_invalid_password_min_one_upper_case_char">Password must contain at least one upper case character</string>
    <string name="error_invalid_password_min_one_digit">Password must contain at least one digit</string>
    <string name="error_invalid_password_min_nine_characters">Password must contain at least 9 characters (including digits)</string>
    <string name="error_invalid_password_repetion">Password repetition does not match to password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="lost_tfa">Lost your tfa?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="create_account"><u>Create one!</u></string>
    <string name="reset"><u>Reset!</u></string>
    <string name="sign_in_underlined"><u>Sign in</u></string>
    <string name="login_password_wrong">Wrong password!</string>
    <string name="mnemonic_description">Please write down the following phrase:\n\n%s</string>
    <string name="mnemonic_next_button">Done</string>
    <string name="mnemonic_question">What\'s the word at the position %d in your mnemonic?</string>
    <string name="mail_confirmation_description">In order to be able continue the setup process, you need to confirm your
        email address first. A mail with a confirmation link has been sent to your inbox. Please follow the instructions
        from the received mail to confirm your email-address.</string>
    <string name="open_mail">Open Mail</string>
    <string name="resend_mail">Resend confirmation mail</string>
    <string name="already_confirmed">Continue</string>
    <string name="change_password_label">Change password</string>
    <string name="hint_current_password">Current password</string>
    <string name="change_password_button">Change password</string>
    <string name="change_tfa_label">Change 2FA secret</string>
    <string name="change_tfa_button">Change 2FA secret</string>
    <string name="info_dialog">Info</string>
    <string name="demo_info_text">
      What is Lorem Ipsum?\n
Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
\n\n
Why do we use it?\n
It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
\n
\n
Where does it come from?\n
Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.
\n\n
The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
    </string>
    <string name="sign_up">Sign up</string>
    <string name="lost_tfa_secret">Lost 2FA Secret</string>
    <string name="sign_out">Sign out</string>
    <string name="setup_fingerprint">Setup Fingerprint</string>
    <string name="welcome_back">Welcome back</string>
    <string name="setup_fingerprint_detail">If you setup fingerprint, the app will request your fingerprint instead on password when opened. Entering the password will not be required each time you open the app. To setup fingerprint please first insert your password below.</string>
    <string name="password_info_text">Your new password must have at least 9 characters.
    \n
    \n
    It must contain numbers, small letters and capitals…</string>
    <string-array name="password_requirements">
        <item>9 characters|The password must have at least 9 characters</item>
        <item>one small letter|It must contain at least one small letter</item>
        <item>one capital letter|It must contain at least one capital letter</item>
        <item>one number|It must contain at least one number</item>
    </string-array>
    <string name="password_not_match">Passwords don\'t match</string>
    <string name="change_fingerprint_label">Fingerprint / Face recognition</string>
    <string name="change_avatar_label">Avatar</string>
    <string name="setup_step_1">step 1 of 3</string>
    <string name="tfa_authentication_title">2 Factor Authentication (2FA)</string>
    <string name="your_2fa_secret">Your 2FA Secret:</string>
    <string name="tfa_reason">For security reasons, your wallet will be protected by 2 Factor Authentication (2FA).</string>
    <string name="tfa_setup_steps">
        To setup 2FA, please:\n
        \n
        1. download a two-factor authenticator app (like Google Authenticator)\n
        \n
        2. copy and enter the above displayed 2FA secret code into the authenticator app\n
        \n
        3. enter the generated 2FA code from the authenticator app into the 2FA Code input and press "Next"
    </string>
    <string name="email_confirm_title">Email confirmation required</string>
    <string name="mail_confirmation_alert">Please confirm your email address first.</string>
    <string name="setup_step_2">Step 2 of 3</string>
    <string name="mnemonic_memorizing_title"><![CDATA[Note & confirm backup secret (mnemonic)]]></string>
    <string name="mnemonic_warning">This step is very important</string>
    <string name="mnemonic_instruction">Please write down your backup secret (mnemonic). You can use it if you lose your
        password to recover your wallet. It can be also used in other apps / wallets that support import from mnemonic.
        If you lose your password and the mnemonic you will not be able to access your funds any more. We can not recover
        your account if you lose both (password and mnemonic). We do not store password and mnemonic.</string>
    <string name="mnemonic_read_more">Read more about mnemonics</string>
    <string name="your_mnemonic">Your secret (24 word mnemonic):</string>
    <string name="mnemonic_confirm">Confirm noting your mnemonic</string>
    <string name="setup_step_3">Step 3 of 3</string>
    <string name="mnemonic_confirm_title">Prove noting of menmonic</string>
    <string name="mnemonic_confirm_description">To prove the noting of your mnemonic, please complete following quiz.</string>
    <string name="mnemonic_confirm_instruction">Here are 4 random words from the mnemonic. Please indicate their position within the mnemonic.</string>
    <string name="go_back_button_text">Go back and show mnemonic</string>
    <string name="change_password_description">To change your password please provide current and new password.</string>
    <string name="error_invalid_current_password">Invalid current password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_new_password_confirmation">Repeat new password</string>
    <string name="password_change_success">Password successfully changed</string>
    <string name="change_tfa_password_description">To change 2FA Secret please insert your password.</string>
    <string name="new_tfa">New 2FA Secret</string>
    <string name="new_tfa_steps">1. copy and enter the below displayed 2FA secret code into the authenticator app\n
    \n
    2. enter the generated 2FA code from the authenticator app into the 2FA Code input and press "Next"</string>
    <string name="login">Login</string>
    <string name="unlock_button">Unlock</string>
    <string name="signup">Sign up</string>
    <string name="lost_password">Lost Password</string>
    <string name="import_mnemonic">Import mnemonic</string>
    <string name="more">More</string>
    <string name="password">Password</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
</resources>