<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/login_item"
            android:icon="@drawable/icon_login"
            android:title="@string/login" />
        <item
            android:id="@+id/signup_item"
            android:icon="@drawable/icon_pencil"
            android:title="@string/signup" />
        <item
            android:id="@+id/lostpass_item"
            android:icon="@drawable/ic_lock"
            android:title="@string/lost_password" />
        <item
            android:id="@+id/losttfa_item"
            android:icon="@drawable/ic_grid"
            android:title="@string/lost_tfa_secret" />
        <item
            android:id="@+id/mnemonic_item"
            android:icon="@drawable/ic_user"
            android:title="@string/import_mnemonic" />
    </group>

    <group
        android:id="@+id/other_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_star"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_item_help" />
    </group>

</menu>
