<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/logout_item"
            android:icon="@drawable/icon_logout"
            android:title="@string/sign_out" />
        <item
            android:id="@+id/home_item"
            android:icon="@drawable/icon_home"
            android:title="@string/home" />
        <item
            android:id="@+id/lostpass_item"
            android:icon="@drawable/icon_link"
            android:title="@string/lost_password" />
        <item
            android:id="@+id/fingerprit_item"
            android:icon="@drawable/icon_facial_recognition"
            android:title="@string/setup_fingerprint" />
    </group>

    <group
        android:id="@+id/other_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/icon_star"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/icon_help32"
            android:title="@string/menu_item_help" />
    </group>

</menu>
