<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.soneso.lumenshine.presentation.widgets.LsTextView
        android:id="@+id/lostPassTab"
        style="@style/MoreTabView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/icon_link"
        android:text="@string/lost_password" />

    <com.soneso.lumenshine.presentation.widgets.LsTextView
        android:id="@+id/lostTfaTab"
        style="@style/MoreTabView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/icon_2fa"
        android:text="@string/lost_tfa_secret" />

    <com.soneso.lumenshine.presentation.widgets.LsTextView
        android:id="@+id/importMnemonicTab"
        style="@style/MoreTabView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/icon_user"
        android:text="@string/import_mnemonic" />

    <com.soneso.lumenshine.presentation.widgets.LsTextView
        android:id="@+id/aboutTab"
        style="@style/MoreTabView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/icon_star"
        android:text="@string/about" />

    <com.soneso.lumenshine.presentation.widgets.LsTextView
        android:id="@+id/helpTab"
        style="@style/MoreTabView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/icon_help32"
        android:text="@string/help" />

</LinearLayout>