<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/size_15"
    tools:context="com.soneso.stellargate.presentation.auth.RegistrationFragment">

    <com.soneso.stellargate.presentation.customViews.FormInputView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:error_text="@string/error_invalid_email"
        app:input_level="@integer/email_input_level"
        app:regex="@string/email_regex" />


    <com.soneso.stellargate.presentation.customViews.PasswordInputView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:input_level="@integer/password_input_level" />


    <com.soneso.stellargate.presentation.customViews.FormInputView
        android:id="@+id/password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password_confirmation"
        android:inputType="textPassword"
        app:input_level="@integer/password_confirmation_input_level" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/salutation_spinner"
            android:layout_width="@dimen/size_75"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light" />

        <com.soneso.stellargate.presentation.customViews.FormInputView
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_first_name"
            android:inputType="textPersonName"
            app:input_level="@integer/first_name_input_level" />
    </LinearLayout>

    <com.soneso.stellargate.presentation.customViews.FormInputView
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_last_name"
        android:inputType="textPersonName"
        app:input_level="@integer/last_name_input_level" />

    <Spinner
        android:id="@+id/country_spinner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_45"
        android:background="@android:color/background_light" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/email_registration_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_register"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_25"
        android:gravity="center"
        android:text="@string/already_have_account" />

    <TextView
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_underlined"
        android:textColor="@color/cyan_500" />

</LinearLayout>