<com.soneso.lumenshine.presentation.widgets.LsCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme.LsCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/size_10">

        <com.soneso.lumenshine.presentation.widgets.LsTextView
            style="@style/LsCardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_password" />

        <com.soneso.lumenshine.presentation.widgets.PasswordInputView
            android:id="@+id/passwordView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_15"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:error_text="@string/error_incorrect_password"
            app:input_level="@integer/input_mandatory" />

        <com.soneso.lumenshine.presentation.widgets.LsButton
            android:id="@+id/unlockButton"
            style="@style/GreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_5"
            android:text="@string/unlock_button" />

        <com.soneso.lumenshine.presentation.widgets.LsButton
            android:id="@+id/lostPassButton"
            style="@style/WhiteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_10"
            android:text="@string/lost_password" />

    </LinearLayout>

</com.soneso.lumenshine.presentation.widgets.LsCardView>
