<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/size_25"
    tools:context="com.soneso.lumenshine.presentation.auth.LoginFragment">

    <com.soneso.lumenshine.presentation.customViews.SgTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="@dimen/text_size_20"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />


    <com.soneso.lumenshine.presentation.customViews.FormInputView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:error_text="@string/error_invalid_email"
        app:input_level="@integer/input_mandatory"
        app:regex="@string/email_regex"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginRight="@dimen/size_20" />


    <com.soneso.lumenshine.presentation.customViews.PasswordInputView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:input_level="@integer/input_mandatory"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginRight="@dimen/size_20" />

    <com.soneso.lumenshine.presentation.customViews.FormInputView
        android:id="@+id/two_factor_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_two_factor"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionUnspecified"
        android:inputType="number"
        app:input_level="@integer/input_optional"
        android:layout_marginLeft="@dimen/size_20"
        android:layout_marginRight="@dimen/size_20" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            android:textColor="@color/text_dark"
            android:layout_gravity="center_horizontal" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>

</LinearLayout>
