<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.soneso.lumenshine.presentation.customViews.SgTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_25"
        android:text="@string/password_change_success"
        android:textColor="@color/green"
        android:textSize="@dimen/text_size_16" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_25"
        android:text="@string/home"
        android:id="@+id/change_pass_home_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_25"
        android:text="@string/settings"
        android:id="@+id/change_pass_settings_button"/>

</LinearLayout>