<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.soneso.lumenshine.presentation.widgets.LsTextView
        android:id="@+id/signOutTab"
        style="@style/LsTabView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/icon_logout"
        android:text="@string/sign_out" />

    <com.soneso.lumenshine.presentation.widgets.LsTextView
        android:id="@+id/homeTab"
        style="@style/LsTabView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/icon_home"
        android:text="@string/home" />

    <com.soneso.lumenshine.presentation.widgets.LsTextView
        android:id="@+id/fingerprintTab"
        style="@style/LsTabView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/icon_facial_recognition"
        android:text="@string/setup_fingerprint" />

</LinearLayout>