<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabBar"
    android:paddingTop="@dimen/size_8"
    android:paddingBottom="@dimen/size_8"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.soneso.lumenshine.presentation.widgets.LsTextView
        android:id="@+id/loginTab"
        style="@style/LsTabView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/icon_login"
        android:text="@string/login" />

    <com.soneso.lumenshine.presentation.widgets.LsTextView
        android:id="@+id/signUpTab"
        style="@style/LsTabView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/icon_pencil"
        android:text="@string/sign_up" />

    <com.soneso.lumenshine.presentation.widgets.LsTextView
        android:id="@+id/moreTab"
        style="@style/LsTabView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/icon_more"
        android:text="@string/more" />

</LinearLayout>